frontend/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: pool
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      #imagePullSecrets:
        #- name: ghcr-pull
      containers:
        - name: frontend
          image: ${FRONTEND_IMAGE}
          imagePullPolicy: ${IMAGE_PULL_POLICY}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
              ephemeral-storage: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
              ephemeral-storage: 128Mi
