frontend/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pool
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
